import "Vector.proto";

message EntityFighter {
    required int32 type = 1;
    required Vector position = 2;
    required Vector velocity = 3;
    required Vector acceleration = 4;
    required int32 ownerId = 5;
    required int32 class = 6;
    optional bool firing = 7;
    optional Vector aim = 8;
    optional float cooldown = 9;
    optional float specialNumber = 10;
    optional bool specialBoolean = 11;
}