import "Vector.proto";

message EntityProjectile {
    required Vector position = 1;
    required Vector velocity = 2;
    required Vector acceleration = 3;
    required int32 ownerId = 4;
    required int32 projectileType = 5;
    required float lifetime = 6;
}