import "EntityFighter.proto";
import "EntityProjectile.proto";

message WorldState {
    required int32 type = 1;
    required int32 randomSeed = 2;
    required int32 randomIndex = 3;
    required int64 timestamp = 4;
    repeated EntityFighter fighters = 5;
    repeated EntityProjectile projectiles = 6;
}